overflowx on body fix

--- a/public/styles/base/_base.scss
+++ b/public/styles/base/_base.scss
@@ -21,6 +21,7 @@ body {
   background-color: $color-white;
   color: $color-black;
   scrollbar-gutter: stable;
+  overflow-x: hidden;
 }
 
 .lock-scroll {
